--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sdk-javipopopo",
-  "version": "0.5.0",
+  "version": "0.7.1",
   "description": "Our thanks to master javi",
-  "main": "/src/main.ts",
+  "main": "src/main.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
